tests/lean/bad_notation.lean.expected.out
bad_notation.lean:6:23: error: invalid notation declaration, contains reference to local variables
bad_notation.lean:9:18: error: unknown identifier 'a1'
bad_notation.lean:9:11: error: don't know how to synthesize placeholder
context:
⊢ Sort ?
